A little mistake here for using incorrect script
That was probably caused by me forgetting to switch between input methods.

--- a/locale/zh_CN.po
+++ b/locale/zh_CN.po
@@ -9063,7 +9063,7 @@ msgstr "重复"
 
 #: src/effects/Reverse.h
 msgid "Reverse"
-msgstr "反向（時間）"
+msgstr "反向（时间）"
 
 #: src/effects/SBSMSEffect.h
 msgid "SBSMS Time / Pitch Stretch"
